# telegram-tipper

./: .env.example  Cargo.toml  docker-compose.yaml
discord_bot/: Cargo.toml
discord_bot/src/: main.rs  utils.rs
discord_bot/src/commands/: change_password.rs  claim.rs  close.rs  compound.rs  create.rs  destroy.rs  export.rs  mod.rs  open.rs  restore.rs  send.rs  status.rs  withdraw.rs
libs/core/: Cargo.toml
libs/core/src/: lib.rs  utils.rs
libs/user/: Cargo.toml
libs/user/src/: user.rs
telegram_bot/: Cargo.toml
telegram_bot/src/: error.rs  lib.rs  main.rs
telegram_bot/src/commands/: change_password.rs  claim.rs  close.rs  create.rs  destroy.rs  export.rs  mod.rs  open.rs  restore.rs  send.rs  status.rs  withdraw.rs
